XW-3300 | fixed dropdowns items alignment

--- a/style-guide/styles/wds-components/_tabs.scss
+++ b/style-guide/styles/wds-components/_tabs.scss
@@ -53,7 +53,7 @@
 	}
 
 	.wds-dropdown__content {
-		left: -$wds-dropdown-padding;
+		left: -$wds-dropdown-padding + $tab-margin-horizontal;
 		transform: none;
 	}
 
